test/Spectre.Console.Cli.Tests/Expectations/Parsing/UnknownCommand/Test_1.Output.verified.txt
Error: Unknown command 'cat'.

       cat 14
       ^^^ No such command